inserito un button nell'html ed usanto un ascoltatore di eventi (evento click) sul button per far comparire il primpt che chiede di inserire il nome all'utente

--- a/jsnack1/index.html
+++ b/jsnack1/index.html
@@ -8,6 +8,7 @@
     <title>Invitati</title>
 </head>
 <body>
-    
+
+    <button id="insertNameButton">Inserisci il tuo nome</button>
 </body>
 </html>
